@@ -9,14 +9,6 @@ AC_DEFUN([SET_ARCH_DIRS],
       BUILD_ARCH_DIR=i586
       INSTALL_ARCH_DIR=i386
       ;;
-    powerpc-*-*)
-      BUILD_ARCH_DIR=ppc
-      INSTALL_ARCH_DIR=ppc
-      ;;
-    powerpc64-*-*)
-      BUILD_ARCH_DIR=ppc64
-      INSTALL_ARCH_DIR=ppc64
-      ;;
     *)
       BUILD_ARCH_DIR=`uname -m`
       INSTALL_ARCH_DIR=$BUILD_ARCH_DIR
